# fuelsignal-retail-fuel-pricing-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: data_quality.yml  environments.yml  model_thresholds.yml  price_forecast_results.json  pricing_policy.yml  pricing_policy_backtest_results.json  project.yml  sources.yml
docs/: architecture.md  assumptions-and-limitations.md  business-case.md  data-contracts.md  data-quality.md  data-sources.md  decision-rights.md  feature-engineering.md  jobs-and-scheduling.md  jump-label-definition.md  margin-proxy-investigation.md  model-eligibility.md  model-results.md  power-bi-connection.md  price-forecast.md  pricing-policy.md  threshold-calibration.md  validation-methodology.md
notebooks/: 00_environment_validation.py  01_bronze_ingestion.py  02_silver_cleaning.py  03_station_master.py  04_competitor_geospatial.py  05_gold_cycle_features.sql  06_pipeline_validation.py
scripts/: calibrate_thresholds.py  deploy_databricks_foundation.py  deploy_databricks_jobs.py  forecast_prices.py  run_gold_pipeline.py  run_ingestion_pipeline.py  run_model_eligibility.py  run_pricing_policy_backtest.py  score_daily.py  train_jump_model.py  validate_live_pipeline.py
sql/ddl/: bronze.sql  gold.sql  silver.sql
sql/gold/: daily_pricing_inputs.sql
sql/silver/: transform_holidays.sql
src/fuelsignal/: __init__.py  config.py  logging.py
tests/: __init__.py
tests/unit/: test_backtest_metrics.py  test_baseline.py  test_config.py  test_databricks_foundation.py  (+16 more)
(+33 files in other folders)
